# backtest-lab

./: BACKLOG.md  CHANGELOG.md  README.md  pyproject.toml
docs/: architecture.md
examples/market_data_toolkit/: README.md  diagnostics_normalized.csv  normalized.csv  weights.csv
src/backtest_lab/: __init__.py  artifacts.py  cli.py  data.py  engine.py  metrics.py  models.py  portfolio.py  reporting.py  strategies.py
tests/: test_cli.py  test_data.py  test_engine.py  test_reporting.py  test_strategies.py
