[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "backtest-lab"
version = "0.1.0"
description = "A compact backtesting engine for daily strategies."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Fabrizio Donati" }
]
dependencies = [
  "matplotlib>=3.9"
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11",
  "pytest>=8.3",
  "ruff>=0.6"
]

[project.scripts]
btlab = "backtest_lab.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/backtest_lab"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["backtest_lab"]
